# s-translate

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  run.cmd  run.ps1  run.sh  translate_run.py
app/: __init__.py  api.py  config.py  jobs.py  main.py  schemas.py
app/combine/: __init__.py  docx_combine.py  libreoffice.py  pdf_combine.py  pptx_combine.py  xlsx_combine.py
app/lang/: detect.py  rtl.py
app/llm/: chunker.py  client.py  prompts.py
app/rtl/: __init__.py  docx_rtl.py  pptx_rtl.py  txt_rtl.py  xlsx_rtl.py
app/translators/: base.py  docx_translator.py  pdf_ocr.py  pdf_translator.py  pptx_translator.py  registry.py  txt_translator.py  xlsx_translator.py
app/utils/: errors.py  io.py  progress.py
app/web/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/web/src/: App.tsx  styles.css
app/web/src/components/: doc-preview.tsx  file-icon.tsx  shape-diagram.tsx
app/web/src/components/ui/: badge.tsx  button.tsx  card.tsx  combobox.tsx  command.tsx  dialog.tsx  input.tsx  label.tsx  popover.tsx  progress-bar.tsx  (+3 more)
app/web/src/lib/: api.ts  data.ts  store.ts  utils.ts
app/web/src/screens/: configure.tsx  progress.tsx  result.tsx  settings-modal.tsx  sidebar.tsx  upload.tsx
tests/: live_test.py  make_fixtures.py  stub_llm.py  test_jobs_api.py  test_llm_conversation.py  test_ollama_base.py  test_pdf_inpaint.py  test_pdf_merge.py  test_pdf_mixed_script.py  test_pdf_ocr_skip.py  test_pdf_rtl_flip.py  test_pipeline.py
